fix spacing main menu

--- a/assets/styles/_scss/partials/header.scss
+++ b/assets/styles/_scss/partials/header.scss
@@ -46,9 +46,6 @@
         width:100%;
         a {
             width:45%;
-            &:nth-child(odd) {
-                margin-left:5%;
-            }
         }
     }
     @media #{$bp-wide-view} {
